--- a/css/style.css
+++ b/css/style.css
@@ -269,6 +269,12 @@ footer {
     .profile {
         margin-top: 60px;
     }
+    .carousel-dark .carousel-caption {
+        margin-top: -170px;
+    }
+    .carousel-dark .carousel-caption p, .carousel-dark .carousel-caption h5 {
+        font-size: 22px;
+    }
   
 
 }
