--- a/css/contact.css
+++ b/css/contact.css
@@ -80,8 +80,16 @@ body {
     #map {
         display: none;
     }
-    .btnContactSubmit {
+    
+.contact-form .btnContact {
     width: 100%;
+    
+}
+#phone {
+    font-size: 16px !important;
+}
+#phone h5 {
+    font-size: 20px!important;
 }
     
 }
