--- a/css/style.css
+++ b/css/style.css
@@ -270,10 +270,11 @@ footer {
         margin-top: 60px;
     }
     .carousel-dark .carousel-caption {
-        margin-top: -170px;
+        margin-top: -100px;
+        min-height: 300px;
     }
     .carousel-dark .carousel-caption p, .carousel-dark .carousel-caption h5 {
-        font-size: 22px;
+        font-size: 22px !important;
     }
   
 
