--- a/css/style.css
+++ b/css/style.css
@@ -257,6 +257,9 @@ footer {
     font-size: 25px;
 }
 @media (max-width: 576px) {
+    .header {
+        max-height: 50px !important;
+    }
    
     .header .top-2 .list-inline-item {
         display: none !important;
