--- a/css/style.css
+++ b/css/style.css
@@ -258,10 +258,7 @@ footer {
 }
 @media (max-width: 576px) {
     .header {
-        max-height: 60px !important;
-    }
-    .m-1 {
-        margin: 0!important;
+        font-size: 18px !important;
     }
     .header .top-2 .list-inline-item {
         display: none !important;
