--- a/css/style.css
+++ b/css/style.css
@@ -257,6 +257,9 @@ footer {
     font-size: 25px;
 }
 @media (max-width: 576px) {
+    .header {
+        max-height: 60%;
+    }
     .header .top-2 .list-inline-item {
         display: none !important;
     }
@@ -276,6 +279,7 @@ footer {
     }
     .carousel-dark .carousel-caption p, .carousel-dark .carousel-caption h5 {
         font-size: 20px;
+       
     }
 }
 
