--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,10 @@
 body, html {
     font-family: 'Almarai', sans-serif;
     background-color: #fff;
-    width:100%;
-
 }
+body {
+    overflow-x: hidden;
+  }
 .header{
     background-color: #012B35;
     color: #fff;
