--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,8 @@
 body, html {
     font-family: 'Almarai', sans-serif;
     background-color: #fff;
-    width: 100%;
+    margin: 0;
+    padding: 0;
 }
 .header{
     background-color: #012B35;
