--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,13 @@ body, html {
     background-color: #fff;
     margin: 0;
     padding: 0;
-    width: auto!important;
-     overflow-x: hidden!important;
+   height: auto !important;
 }
+html {
+    overflow-x: hidden;
+}
+
+
 
 .header{
     background-color: #012B35;
